--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
               this.parameters[ParametersKind.g].addAddEffect("r upgrade g", () => 0.01 * this.dto.upgradeLevels[UpgradeKind.g]);
               this.parameters[ParametersKind.a].addMulEffect("r upgrade beMul passive", () => (this.parameters[ParametersKind.b].evaluate() + this.parameters[ParametersKind.c].evaluate() + this.parameters[ParametersKind.d].evaluate() + this.parameters[ParametersKind.e].evaluate() + this.parameters[ParametersKind.f].evaluate() + this.parameters[ParametersKind.g].evaluate()) / 6.0);
               this.parameters[ParametersKind.a].addMulEffect("r upgrade beMul active", () => 1 + 0.1 * this.dto.upgradeLevels[UpgradeKind.beMul])
-              this.parameters[ParametersKind.delta_r].addMulEffect("r upgrade rAll passive", () => 1 + (this.dto.upgradeLevels[UpgradeKind.k] + this.dto.upgradeLevels[UpgradeKind.a] + this.dto.upgradeLevels[UpgradeKind.b] + this.dto.upgradeLevels[UpgradeKind.c] + this.dto.upgradeLevels[UpgradeKind.d] + this.dto.upgradeLevels[UpgradeKind.ae11] + this.dto.upgradeLevels[UpgradeKind.logk] + this.dto.upgradeLevels[UpgradeKind.e] + this.dto.upgradeLevels[UpgradeKind.f] + this.dto.upgradeLevels[UpgradeKind.beMul] + this.dto.upgradeLevels[UpgradeKind.rAll]) / 10000);
+              this.parameters[ParametersKind.delta_r].addMulEffect("r upgrade rAll passive", () => 1 + (this.dto.upgradeLevels[UpgradeKind.k] + this.dto.upgradeLevels[UpgradeKind.a] + this.dto.upgradeLevels[UpgradeKind.b] + this.dto.upgradeLevels[UpgradeKind.c] + this.dto.upgradeLevels[UpgradeKind.d] + this.dto.upgradeLevels[UpgradeKind.e] + this.dto.upgradeLevels[UpgradeKind.ae11] + this.dto.upgradeLevels[UpgradeKind.logk] + this.dto.upgradeLevels[UpgradeKind.f] + this.dto.upgradeLevels[UpgradeKind.g] + this.dto.upgradeLevels[UpgradeKind.beMul] + this.dto.upgradeLevels[UpgradeKind.rAll]) / 10000);
               this.parameters[ParametersKind.delta_r].addMulEffect("r upgrade rAll active", () => 1 + 0.1 * this.dto.upgradeLevels[UpgradeKind.rAll]);
 
               this.parameters[ParametersKind.n].addAddEffect("p upgrade n", () => this.dto.upgradeLevels[UpgradeKind.n]);
@@ -1011,7 +1011,7 @@
 
       <img src="https://visitor-badge.glitch.me/badge?page_id=kloppie5.idlespiralinforepo" alt="visitor counter" /><br/>
 
-      v0.2206222113<br/>
+      v0.2206222132<br/>
       <textarea id="savefiletextarea" rows="10" cols="50" placeholder="Save file here"></textarea>
       <button onclick="loadSaveFile()">Load</button>
       
