--- a/index.html
+++ b/index.html
@@ -1125,7 +1125,6 @@
         </div>
 
         <div class="marked" id="main" style="position: absolute; left: 420px; width: 780px">
-          Still very much a work in progress; some numbers are slightly off and I'm trying to figure out why
           <div class="explanation" id="explanation_delta_r" style="display: none">
             Explanation delta r
           </div>
@@ -1195,39 +1194,69 @@
           <div class="explanation" id="explanation_delta" style="display: none">
             Explanation delta
           </div>
-          
-
-
+          <div class="explanation" id="explanation_hp" style="display: none">
+            Explanation hp
+          </div>
+          <div class="explanation" id="explanation_atk" style="display: none">
+            Explanation atk
+          </div>
+          <div class="explanation" id="explanation_def" style="display: none">
+            Explanation def
+          </div>
+          <div class="explanation" id="explanation_attack_speed" style="display: none">
+            Explanation attack_speed
+          </div>
+          <div class="explanation" id="explanation_critical" style="display: none">
+            Explanation critical
+          </div>
+          <div class="explanation" id="explanation_criticalDamage" style="display: none">
+            Explanation criticalDamage
+          </div>
+          <div class="explanation" id="explanation_super_critical" style="display: none">
+            Explanation super_critical
+          </div>
+          <div class="explanation" id="explanation_super_critical_damage" style="display: none">
+            Explanation super_critical_damage
+          </div>
+          <div class="explanation" id="explanation_rare_chance" style="display: none">
+            Explanation rare_chance
+          </div>
+          <div class="explanation" id="explanation_math_skill" style="display: none">
+            Explanation math_skill
+          </div>
+          <div class="explanation" id="explanation_enemy_growth_reduction" style="display: none">
+            Explanation enemy_growth_reduction
+          </div>
         </div>
 
         <div class="marked" style="position: absolute; left: 1200px; width: 300px">
-          <div class="effect marked" style="height: 20px">
-            <div class="marked">HP</div>
+          <div class="effect marked explainable explain_hp" style="height: 20px">
+            <div>HP</div>
             <div>&nbsp;=&nbsp;</div>
             <div class="update_display display_hp">0</div>
           </div>
-          <div class="effect marked" style="height: 20px">
-            <div class="marked">ATK</div>
+          <div class="effect marked explainable explain_atk" style="height: 20px">
+            <div>ATK</div>
             <div>&nbsp;=&nbsp;</div>
             <div class="update_display display_atk">0</div>
           </div>
-          <div class="effect marked" style="height: 20px">
-            <div class="marked">DEF</div>
+          <div class="effect marked explainable explain_def" style="height: 20px">
+            <div>DEF</div>
             <div>&nbsp;=&nbsp;</div>
             <div class="update_display display_def">0</div>
           </div>
-          <div class="effect marked" style="height: 20px">
-            <div class="marked">Attack Speed</div>
+          <div class="effect marked explainable explain_attack_speed" style="height: 20px">
+            <div>Attack Speed</div>
             <div>&nbsp;=&nbsp;</div>
             <div class="update_display display_attack_speed">0</div>
           </div>
-          <div class="effect marked" style="height: 20px">
-            <div class="marked">- Pure Attack Speed</div>
+          <div class="effect marked explainable explain_attack_speed" style="height: 20px">
+            <div>- Pure Attack Speed</div>
             <div>&nbsp;=&nbsp;</div>
             <div class="update_display battle_reward_attackSpeed">0</div>
           </div>
-          <div class="effect marked" style="height: 20px">
-            <div class="marked">- Time to Attack</div>
+          <div class="effect marked explainable explain_attack_speed" style="height: 20px">
+            <div>- Time to Attack</div>
             <div>&nbsp;=&nbsp;</div>
             <div id="custom_update_time_to_attack">0</div>
             <script>
@@ -1236,43 +1265,43 @@
               });
             </script>
           </div>
-          <div class="effect marked" style="height: 20px">
-            <div class="marked">Crit Rate</div>
+          <div class="effect marked explainable explain_critical" style="height: 20px">
+            <div>Crit Rate</div>
             <div>&nbsp;=&nbsp;</div>
             <div class="update_display display_critical">0</div>
           </div>
-          <div class="effect marked" style="height: 20px">
-            <div class="marked">Crit Damage</div>
+          <div class="effect marked explainable explain_criticalDamage" style="height: 20px">
+            <div>Crit Damage</div>
             <div>&nbsp;=&nbsp;</div>
             <div class="update_display display_criticalDamage">0</div>
           </div>
-          <div class="effect marked" style="height: 20px">
-            <div class="marked">S-Crit Rate</div>
+          <div class="effect marked explainable explain_super_critical" style="height: 20px">
+            <div>S-Crit Rate</div>
             <div>&nbsp;=&nbsp;</div>
             <div class="update_display display_super_critical">0</div>
           </div>
-          <div class="effect marked" style="height: 20px">
-            <div class="marked">S-Crit Damage</div>
+          <div class="effect marked explainable explain_super_critical_damage" style="height: 20px">
+            <div>S-Crit Damage</div>
             <div>&nbsp;=&nbsp;</div>
             <div class="update_display display_super_critical_damage">0</div>
           </div>
-          <div class="effect marked" style="height: 20px">
-            <div class="marked">Rare Drop Rate</div>
+          <div class="effect marked explainable explain_rare_chance" style="height: 20px">
+            <div>Rare Drop Rate</div>
             <div>&nbsp;=&nbsp;</div>
             <div class="update_display display_rare_drop">0</div>
           </div>
-          <div class="effect marked" style="height: 20px">
-            <div class="marked">- Pure Rare Drop</div>
+          <div class="effect marked explainable explain_rare_chance" style="height: 20px">
+            <div>- Pure Rare Drop</div>
             <div>&nbsp;=&nbsp;</div>
             <div class="update_display battle_reward_rare_chance">0</div>
           </div>
-          <div class="effect marked" style="height: 20px">
-            <div class="marked">Math Skill</div>
+          <div class="effect marked explainable explain_math_skill" style="height: 20px">
+            <div>Math Skill</div>
             <div>&nbsp;=&nbsp;</div>
             <div class="update_display display_math_skill">0</div>
           </div>
-          <div class="effect marked" style="height: 20px">
-            <div class="marked">Enemy Growth Reduction</div>
+          <div class="effect marked explainable explain_enemy_growth_reduction" style="height: 20px">
+            <div>Enemy Growth Reduction</div>
             <div>&nbsp;=&nbsp;</div>
             <div class="update_display display_enemy_growth_reduction">0</div>
           </div>
